省略を辞める

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,7 +9,7 @@ bind C-r source-file ~/.tmux.conf; display-message "reload ~/.tmux.conf"
 
 # char encording
 set-window-option -g utf8 on
-set -g status-utf8 on
+set-option -g status-utf8 on
 
 # split window
 bind v split-window -v
