デフォルトshell、ヒストリースクロール変更

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,11 @@
 # Prefix
 set-option -g prefix C-t
 
+# shell
+set-option -g default-shell /bin/zsh
+
 # back scroll
-set-option -g history-limit 10000
+set-option -g history-limit 100000
 
 # key bind
 bind C-r source-file ~/.tmux.conf; display-message "reload ~/.tmux.conf"
