--- a/.tmux.conf
+++ b/.tmux.conf
@@ -46,3 +46,6 @@ set-window-option -g window-status-current-fg cyan
 set-window-option -g window-status-current-bg blue
 
 set-option -g status-right '[#(echo $LANG)][%Y/%m/%d %H:%M]'
+
+# pbcopy pbpaste
+set-option -g default-command "reattach-to-user-namespace -l zsh"
