gitconfig color設定追加、マウスホイール設定追加

--- a/.gitconfig
+++ b/.gitconfig
@@ -3,8 +3,8 @@
 	email = 
 
 [core]
-	autocrlf = true
-	editor   = "vim"
+	autocrlf = input
+	editor   = vim
 
 [color]
 	ui          = true
@@ -18,7 +18,7 @@
 	# http://blog.blindgaenger.net/advanced_git_aliases.html
 	alias = !git config --list | grep 'alias\\.' | sed 's/alias\\.\\([^=]*\\)=\\(.*\\)/\\1\\\t => \\2/' | sort
 	br = branch
-	ci = commit
+	ci = commit -va
 	co = checkout
 	di = diff
 	st = status
