--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,6 +30,9 @@ bind -n S-right select-pane -R
 bind -n S-down select-pane -D
 bind -n S-up select-pane -U
 
+# pane synchronize
+bind y set-window-option synchronize-panes
+
 # pane color
 set-option -g pane-border-fg white
 set-option -g pane-border-bg black
@@ -49,3 +52,7 @@ set-option -g status-right '[#(echo $LANG)][%Y/%m/%d %H:%M]'
 
 # pbcopy pbpaste
 set-option -g default-command "reattach-to-user-namespace -l zsh"
+
+# mouse scroll
+set-window-option -g mode-mouse on
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
