--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,6 @@
+# vi-style controls for copy mode
+setw -g mode-keys vi
+
 # Prefix
 set-option -g prefix C-t
 
@@ -29,6 +32,9 @@ bind -n S-left select-pane -L
 bind -n S-right select-pane -R
 bind -n S-down select-pane -D
 bind -n S-up select-pane -U
+
+# copy mode y yank
+bind -t vi-copy y copy-selection
 
 # pane synchronize
 bind y set-window-option synchronize-panes
