--- a/.tmux.conf
+++ b/.tmux.conf
@@ -59,6 +59,9 @@ set-option -g status-right '[#(echo $LANG)][%Y/%m/%d %H:%M]'
 # pbcopy pbpaste
 set-option -g default-command "reattach-to-user-namespace -l zsh"
 
+bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+bind C-v run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
+
 # mouse scroll
 set-window-option -g mode-mouse on
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
