--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,21 +1,29 @@
-# vi-style controls for copy mode
+# Prefix
+set -g prefix C-t
+
+# Use vim keybindings in copy mode
 setw -g mode-keys vi
 
-# Prefix
-set-option -g prefix C-t
+# Setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 # shell
-set-option -g default-shell /bin/zsh
-
-# back scroll
-set-option -g history-limit 100000
-
-# key bind
-bind C-r source-file ~/.tmux.conf; display-message "reload ~/.tmux.conf"
+set -g default-shell /bin/zsh
 
 # char encording
-set-window-option -g utf8 on
-set-option -g status-utf8 on
+setw -g utf8 on
+set -g status-utf8 on
+
+# back scroll
+set -g history-limit 100000
+
+# key bind
+bind C-r source-file ~/.tmux.conf\; display-message "reload ~/.tmux.conf"
 
 # split window
 bind v split-window -v
@@ -33,35 +41,41 @@ bind -n S-right select-pane -R
 bind -n S-down select-pane -D
 bind -n S-up select-pane -U
 
-# copy mode y yank
-bind -t vi-copy y copy-selection
-
 # pane synchronize
 bind y set-window-option synchronize-panes
 
 # pane color
-set-option -g pane-border-fg white
-set-option -g pane-border-bg black
-set-option -g pane-active-border-fg green
-set-option -g pane-active-border-bg black
+set -g pane-border-fg white
+set -g pane-border-bg black
+set -g pane-active-border-fg green
+set -g pane-active-border-bg black
 
 # status line
-set-option -g status-utf8 on
-set-option -g status-interval 5
+set -g status-utf8 on
+set -g status-interval 5
 
-set-option -g status-fg cyan
-set-option -g status-bg black
-set-window-option -g window-status-current-fg cyan
-set-window-option -g window-status-current-bg blue
+set -g status-fg cyan
+set -g status-bg black
+setw -g window-status-current-fg cyan
+setw -g window-status-current-bg blue
 
-set-option -g status-right '[#(echo $LANG)][%Y/%m/%d %H:%M]'
+set -g status-right '[#(echo $LANG)][%Y/%m/%d %H:%M]'
 
 # pbcopy pbpaste
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+set -g default-command "reattach-to-user-namespace -l zsh"
 
 bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 bind C-v run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
 
 # mouse scroll
-set-window-option -g mode-mouse on
+setw -g mode-mouse on
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+
+# window status unvisible
+#set-window-option -g automatic-rename off
+
+# v1.9 から pane_current_path を引き継がなくなったので明示的にやる
+bind 'v' split-window -vc "#{pane_current_path}"
+bind 'h' split-window -hc "#{pane_current_path}"
+
+bind 'c' new-window -c "#{pane_current_path}"
