fix tmux.conf for v2.1

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -68,7 +68,7 @@ bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 bind C-v run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
 
 # mouse scroll
-setw -g mode-mouse on
+setw -g mouse on
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 # window status unvisible
