--- a/dein_lazy.toml
+++ b/dein_lazy.toml
@@ -18,6 +18,10 @@ on_i = 1
 repo = 'tpope/vim-surround'
 on_i = 1
 
+[[plugins]] # JavaScript libraries highlight
+repo = 'othree/javascript-libraries-syntax.vim'
+on_ft = 'javascript'
+
 [[plugins]]
 repo = 'mattn/emmet-vim'
 on_ft = 'html'
