--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "require": {
-        "phpunit/phpunit": "5.0.*",
         "laravel/installer": "^1.3",
-        "fabpot/php-cs-fixer": "^1.11"
+        "friendsofphp/php-cs-fixer": "^1.12",
+        "hirak/prestissimo": "^0.3.4",
+        "phpunit/phpunit": "^5.6"
     }
 }
