--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
         "laravel/installer": "^1.3",
         "friendsofphp/php-cs-fixer": "^1.12",
         "hirak/prestissimo": "^0.3.4",
-        "phpunit/phpunit": "^5.6"
+        "phpunit/phpunit": "^5.6",
+        "psy/psysh": "^0.8.0"
     }
 }
