updated tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,22 +1,8 @@
-# Prefix
+# change prefix key to C-t
 set -g prefix C-t
 
-# Use vim keybindings in copy mode
-setw -g mode-keys vi
-
-# Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-
-# Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-
-# shell
-set -g default-shell /bin/zsh
-
-# back scroll
-set -g history-limit 100000
+## back scroll
+#set -g history-limit 10
 
 # key bind
 bind C-r source-file ~/.tmux.conf\; display-message "reload ~/.tmux.conf"
@@ -25,52 +11,26 @@ bind C-r source-file ~/.tmux.conf\; display-message "reload ~/.tmux.conf"
 bind v split-window -v
 bind h split-window -h
 
-# resize pane
-bind -r C-h resize-pane -L 2
-bind -r C-l resize-pane -R 2
-bind -r C-j resize-pane -D 2
-bind -r C-k resize-pane -U 2
-
 # change pane
-bind -n S-left select-pane -L
-bind -n S-right select-pane -R
-bind -n S-down select-pane -D
-bind -n S-up select-pane -U
+bind -r C-h select-pane -L
+bind -r C-l select-pane -R
+bind -r C-j select-pane -D
+bind -r C-k select-pane -U
 
 # pane synchronize
 bind y set-window-option synchronize-panes
-
-# pane color
-set -g pane-border-fg white
-set -g pane-border-bg black
-set -g pane-active-border-fg green
-set -g pane-active-border-bg black
 
 # status line
 set -g status-interval 5
 
 set -g status-fg cyan
 set -g status-bg black
-setw -g window-status-current-fg cyan
-setw -g window-status-current-bg blue
 
 set -g status-right '[#(echo $LANG)][%Y/%m/%d %H:%M]'
 
-# pbcopy pbpaste
-set -g default-command "reattach-to-user-namespace -l zsh"
-
-bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
-bind C-v run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
-
 # mouse scroll
 setw -g mouse on
-set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
 
-# window status unvisible
-#set-window-option -g automatic-rename off
-
-# v1.9 から pane_current_path を引き継がなくなったので明示的にやる
-bind 'v' split-window -vc "#{pane_current_path}"
-bind 'h' split-window -hc "#{pane_current_path}"
-
-bind 'c' new-window -c "#{pane_current_path}"
+# use vim keybindings on copy mode
+setw -g mode-keys vi
