modified new pane keep current path

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,9 +7,15 @@ set -g prefix C-t
 # key bind
 bind C-r source-file ~/.tmux.conf\; display-message "reload ~/.tmux.conf"
 
+# new window keep current path
+bind c new-window -c '#{pane_current_path}'
+
 # split window
 bind v split-window -v
 bind h split-window -h
+
+bind '"' split-window -c '#{pane_current_path}'
+bind % split-window -h -c '#{pane_current_path}'
 
 # change pane
 bind -r C-h select-pane -L
